--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
 
         <!--Navbar 2-->
         <nav class="navbar navbar-expand-lg navbar-light bg-success sticky-top">
+          <div class="container">
             <a class="navbar-brand" href="home.html">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -28,13 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-link active" href="#welcome">About</a>
-                <a class="nav-link active" href="#">Pricing</a>
+                <a class="nav-link active" href="#visimisi">Visi dan Misi</a>
+                <a class="nav-link active" href="lingkup.html">Lingkup Pengembangan</a>
+                <a class="nav-link active" href="galeri.html">Galeri</a>
               </div>
             </div>
+          </div>
           </nav>
 
     <!--carousel-->
-    <div id="carouselExampleCaptions" class="carousel slide ml-3 mr-3 mb-5 mt-1" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -76,9 +80,9 @@
             <h6 style="margin-top: 10px;">Pendidikan Anak Usia Dini (PAUD) TKA AL IKHLAS adalah tempat pendidikan yang paling fundamental dalam mengembangkan potensi kecerdasan melalui stimulasi yang akan menentukan keberhasilan anak dalam mencapai perkembangan yang optimal seusai karakteristik, minat, dan potensinya. <br>Masa Usia dini adalah masa emas perkembangan anak, perlunya upaya perkembangan aspek menyeluruh (pengasuhan, kesehatan, pendidikan, perlindungan), hingga siap memasuki pendidikan lebih lanjut.</h6>
         </div>
 
-        <div class="gg bg-light">
+        <div class="gg bg-light" id="visimisi">
         <h3 style="text-align: center;">Visi dan Misi</h3>
-        <div class="row" style="margin-bottom: 300px;margin-top: 40px;">
+        <div class="row" style="margin-bottom: 30px;margin-top: 40px;">
             <div class="col-6">
                 <div class="media">
                     <img src="https://images.pexels.com/photos/355952/pexels-photo-355952.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="mr-3" alt="..." style="height: 30%;width: 30%;">
@@ -104,6 +108,19 @@
             </div>
         </div>
     </div>
+
+    <footer>
+      <div class="card bg-success">
+        <div class="card-body">
+          <div class="container">
+          <blockquote class="blockquote">
+            <footer class="blockquote-footer" style="color: black;float: left;">copyright by || <cite title="Source Title">@fadlyatthoriq15</cite></footer>
+            <footer class="blockquote-footer" style="color: black;float: right;">TK AL-Ikhlas</footer>
+          </blockquote>
+        </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
